--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -6,6 +6,10 @@
     a {
       color: $barely-color;
     }
+    ul li {
+      display: inline-block;
+      padding: 0px 0px 0px 20px;
+    }
   }
   .title {
     text-align: center;
