added node and web sockets for realtime updates of social publishing

--- a/views/shared/_head.haml
+++ b/views/shared/_head.haml
@@ -25,7 +25,9 @@
 = javascript_include_tag "cufon"
 = javascript_include_tag "museo"
 = javascript_include_tag "jquery.jgrowl"
+= javascript_include_tag "socket.io/socket.io.js"
 = javascript_include_tag "application"
+= javascript_include_tag "async"
 
 / links
 %link{:rel => "shortcut icon", :href => "#{c("icons.favicon")}", :type => "image/x-icon"}
